Update birthday message in bd.html

--- a/bd.html
+++ b/bd.html
@@ -137,17 +137,17 @@
             <!-- PAGE DROITE (texte) -->
             <div class="page droite">
                 <div class="texte">
-                    🌸 Joyeux anniversaire 🌸<br><br>
-                    Que cette nouvelle année t'apporte  
-                    autant de douceur que ton sourire. 💕<br><br>
-                    Tu es quelqu'un d'unique.
+                    🌸 Joyeux anniversaire !!! 🌸<br><br>
+                    18 ans aujourd'hui eh beh quand même !
+                    je t'aime tellement mon petit bébé d'amour💕<br><br>
+                    Tu es quelqu'un d'incroyable meu Anjinho 💗💗💗
                 </div>
             </div>
         </div>
 
         <!-- ----- COUVERTURE ----- -->
         <div class="couverture" id="couverture">
-            <div class="texte-couverture">Joyeux Anniversaire 💖</div>
+            <div class="texte-couverture">Joyeux Anniversaire 💞</div>
         </div>
 
     </div>
